Fix background colors
Short page texts shows white at the bottom of the footer. This makes
the background of the whole page the same as the background of the
footer. The header and content each uses their background color.

--- a/404.md
+++ b/404.md
@@ -1,29 +1,12 @@
 ---
 layout: page
-title: "404: Page not found"
+title: "404: Page not Found"
 permalink: 404.html
 ---
 
 Sorry for the inconvenience.<br/>
-We have misplaced that URL or it's pointing to something that doesn't exist.<br/>
+We have misplaced that URL or it's pointing to something that doesn't exist.
 
-<a href="{{ site.baseurl }}/">Head back home</a> for now as we fix this error.<br/>
+[Head back home]({{ site.baseurl }}/) for now as we fix this error.
 
 You may also email us to report this error.
-
-{% comment %}
-Fill with vertical space
-{% endcomment %}
-
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
