Add news bit publish flag

--- a/newsbit/_posts/2016-06-14-1.md
+++ b/newsbit/_posts/2016-06-14-1.md
@@ -2,6 +2,7 @@
 title: Announcement
 date: June 14, 2016 1:23 AM
 category: newsbit
+publish: true
 ---
 
 Aquino verifying reports with AFP and PNP that the terrorist group Abu Sayaff beheaded the Canadian hostage, Robert Hall, Monday afternoon, June 13, 2016.
