--- a/newsbit/_posts/2016-06-14-2.md
+++ b/newsbit/_posts/2016-06-14-2.md
@@ -2,6 +2,7 @@
 title: Announcement
 date: June 14, 2016 1:53 AM
 category: newsbit
+publish: false
 ---
 
 Head found in Jolo, Sulu on Monday night 8:45 PM, believed to be the head of Canadian captive. - AFP WestMinCom
