--- a/newsbit/_posts/2016-06-14-4.md
+++ b/newsbit/_posts/2016-06-14-4.md
@@ -2,6 +2,7 @@
 title: Announcement
 date: June 14, 2016 3:13 AM
 category: newsbit
+publish: true
 ---
 
 Prof. Jose David Lapuz to be CHED chairman according to Ateneo de Davao President Fr. Joel Tabora, S.J.
