--- a/newsbit/_posts/2016-06-14-5.md
+++ b/newsbit/_posts/2016-06-14-5.md
@@ -2,6 +2,7 @@
 title: Announcement
 date: June 14, 2016 3:13 AM
 category: newsbit
+publish: true
 ---
 
 AFP confirms that the severed head found in Jolo, Sulu was Canadian Robert Hall. Robert Hall is the second Canadian hostage killed by the ASG.
