--- a/_posts/2016-06-12-20160612T140710.md
+++ b/_posts/2016-06-12-20160612T140710.md
@@ -5,6 +5,7 @@ excerpt: Message of President Benigno Aquino III during the 118th Philppine Inde
 layout: post
 categories: [post]
 tags: [independence day, vin d honneur, aquino, pnoy]
+published: true
 video: ekiXQM5D-s4
 videoref: RTVM
 ---
