--- a/_posts/2016-06-12-20160612T152603.md
+++ b/_posts/2016-06-12-20160612T152603.md
@@ -5,6 +5,7 @@ excerpt: What does it mean?
 layout: post
 categories: [post]
 tags: [independence day, vin d honneur]
+published: true
 ---
 
 The British New Year's Day Levee was adopted by the Americans and later by the Philippines.
