--- a/_posts/2016-06-12-20160612T140710.md
+++ b/_posts/2016-06-12-20160612T140710.md
@@ -1,7 +1,7 @@
 ---
 title: 118th Philippine Independence Day Vin D’Honneur
 date: 2016-06-12T14:07:10UTC
-excerpt: Message of President Benigno Aquino III during the 118th Philppine Independence Day Vin D’Honneur at Rizal Hall, Malacañan Palace, Philippines.
+excerpt: Message of President Benigno Aquino III during the 118th Philppine Independence Day Vin D’Honneur.
 layout: post
 categories: [post]
 tags: [independence day, vin d honneur, aquino, pnoy]
