--- a/_posts/2016-06-12-20160612T123257.md
+++ b/_posts/2016-06-12-20160612T123257.md
@@ -1,7 +1,7 @@
 ---
 title: Duterte Times is now Online
 date: 2016-06-12T12:32:57UTC
-excerpt: Duterte Times alternative online news is now operational to deliver news and information to the Filipino people.
+excerpt: Duterte Times is now online to deliver Philippine news and information for the Filipino people.
 layout: post
 categories: [post]
 tags: [duterte times, online, launch]
@@ -9,14 +9,14 @@ published: true
 ---
 
 Duterte Times is an alternative online news about the Philippines.
-Specifically it will be focused on the presidential term of Rodrigo Roa Duterte, the 16th President of the Republic of the Philippines.
+Specifically, it will be focused on the presidential term of Rodrigo Roa Duterte, the 16th President of the Republic of the Philippines.
 
-Due to the recent events leading to the media boycott of President-elect Rodrigo R. Duterte, the media and the public will all be relying more on the same second hand information coursed through the state-owned media stations.
-This may have levelled the playing field and a good opportunity to report on the same news alongside the big media companies of the country.
+Due to the recent events leading to the media boycott of President-elect Rodrigo R. Duterte, the media and the public will be relying more on the same second hand information coursed through the state-owned media stations.
+This may have levelled the playing field and would appear to be a good opportunity to report news alongside the big media companies of the country.
 This is an attempt to be in the news media; a far cry from my field.
 
-I am riding on power of information technology which may someday soon rival the traditional media.
-Sources of information are now shifting from a few to everyone because of technology.
+I am riding on the power of information technology which could soon rival traditional media.
+Sources of information are now shifting from a few to the many, tapping on the advances of technology.
 Many are already on the internet, the infrastructure for information exchange, and I am hoping to come up with a solution on how to distribute and share information better.
 
 Stay tuned and good reading.
