--- a/_posts/2016-06-12-20160612T123257.md
+++ b/_posts/2016-06-12-20160612T123257.md
@@ -9,6 +9,7 @@ published: true
 ---
 
 Duterte Times is an alternative online news about the Philippines.
+This is a voice for the Filipino against biased and unworthy news.
 Specifically, it will be focused on the presidential term of Rodrigo Roa Duterte, the 16th President of the Republic of the Philippines.
 
 Due to the recent events leading to the media boycott of President-elect Rodrigo R. Duterte, the media and the public will be relying more on the same second hand information coursed through the state-owned media stations.
@@ -18,5 +19,8 @@ This is an attempt to be in the news media; a far cry from my field.
 I am riding on the power of information technology which could soon rival traditional media.
 Sources of information are now shifting from a few to the many, tapping on the advances of technology.
 Many are already on the internet, the infrastructure for information exchange, and I am hoping to come up with a solution on how to distribute and share information better.
+
+It is intended to share the information contained herein except those that are copyrighted by third-party sources so this license.
+Except where otherwise noted, the content on this site (Duterte Times) is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA)]({{ site.data.links.cc_by_sa_license }}). You are free to copy reproduce, distribute, display, and make adaptations but you must provide [proper attribution]({{ site.data.link.attribution }}).
 
 Stay tuned and good reading.
