Rephrase/correct first post

--- a/_posts/2016-06-12-20160612T123257.md
+++ b/_posts/2016-06-12-20160612T123257.md
@@ -20,7 +20,10 @@ I am riding on the power of information technology which could soon rival tradit
 Sources of information are now shifting from a few to the many, tapping on the advances of technology.
 Many are already on the internet, the infrastructure for information exchange, and I am hoping to come up with a solution on how to distribute and share information better.
 
-It is intended to share the information contained herein except those that are copyrighted by third-party sources so this license.
-Except where otherwise noted, the content on this site (Duterte Times) is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA)]({{ site.data.links.cc_by_sa_license }}). You are free to copy reproduce, distribute, display, and make adaptations but you must provide [proper attribution]({{ site.data.link.attribution }}).
+Almost all news sites are copyrighted.
+This prevents one from sharing information legally except those stated to be allowable by law.
+The information on this site is intended to be shared, except those that are copyrighted by third-party sources, therefore it is licensed CC-BY-SA:
+
+> Except where otherwise noted, the content on this site (Duterte Times) is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA)]({{ site.data.links.cc_by_sa_license }}). You are free to copy reproduce, distribute, display, and make adaptations but you must provide [proper attribution]({{ site.data.link.attribution }}).
 
 Stay tuned and good reading.
