Fix names in post

--- a/_posts/2016-06-16-20160616T213912.md
+++ b/_posts/2016-06-16-20160616T213912.md
@@ -77,8 +77,8 @@ According to the GMA phone interview with Liberal Party spokesperson Barry Gutie
 ## Commission on Election en banc (June 16)
 
 On June 16, the Commission on Election en banc resolved not only in favor of the requested 14-day extension of the filing of SOCE but also to extend the deadline until June 30.
-Those who voted in favor were: Commissioners Arthur Lim, Al Parreño, Sheriff Abas and Rowena Guanzon.
-Chairman Juan Andres Bautista and Commissioners Luie Guia and Christian Robert Lim voted against the request, although, according to Comelec spokesman James Jimenez, Bautista changed his no-extension vote to
+Those who voted in favor were: Commissioners Arthur Lim, Al Parreño, Sheriff Abas and Ma. Rowena Amelia Guanzon.
+Chairman Juan Andres Bautista and Commissioners Luie Tito Guia and Christian Robert Lim voted against the request, although, according to Comelec spokesman James Jimenez, Bautista changed his no-extension vote to
 "_allow the late filing but with imposition of appropriate fines and penalties_."
 [[Manila Times](http://www.manilatimes.net/comelec-allows-late-soce-filing/268247/)]
 
