--- a/_posts/2016-06-20-20160620T161719.md
+++ b/_posts/2016-06-20-20160620T161719.md
@@ -22,3 +22,6 @@ The other two who voted the same are Chairman Juan Andres Bautista and Commissio
 Those who voted in favor of the deadline extension are Commissioners Arthur Lim, Al Parreño, Sheriff Abas and Ma. Rowena Amelia Guanzon.
 
 "Even in 2013, I was still fighting for a non-extendable rule. Di pumayag ang en banc kaya merong late penalty. But 2013 was experimental, 2016 was the culmination so now we are back to zero. Parang sayang lahat ng efforts," Lim explained.
+
+Commissioner Christian Robert Lim was once designated as the Lead Champion for the Strategic Pillar on Legal Policy and Framework one of the ten (10) strategic pillars in the Commission's Strategic Plan for 2011 to 2016, which is also known as COMSTRAT 1116. The main objective of the Pillar on Legal Policy and Framework is to harmonize all election laws, rules and regulations with the end goal of having a revised Omnibus Election Code that is complete, updated, clear and enforceable.
+[[Commissioner Christian Robert Lim Comelec profile](http://www.comelec.gov.ph/?r=AboutCOMELEC/CommissionMembers/LimProfile)]
