--- a/_posts/2016-06-16-20160616T213912.md
+++ b/_posts/2016-06-16-20160616T213912.md
@@ -103,7 +103,7 @@ Meaning, that the filing of SOCE, may it be on time or late, does not prohibit a
 R.A. 7166 Section 14 says, if the filing is late then there are penalties.
 But doesn't it also states that until the elected person and his/her party files their SOCEs, the elected person shall not enter upon the duties of his office?
 
-### Is Comelec authorized to extend the SOCE filing deadline?
+### Is Comelec allowed by law to extend the SOCE filing deadline?
 
 Aside from the recent decision, the Comelec has also moved the SOCE deadline twice in the 2013 national and local elections.
 They may have referred to their mandate in R.A. 7166 Section 35 which states,
@@ -112,7 +112,7 @@ They may have referred to their mandate in R.A. 7166 Section 35 which states,
 
 But R.A. 7166 Section 35 speaks of the implementation of the Act.
 To implement is to enforce and not to amend nor to violate.
-It did not authorize Comelec to extend or move the deadline of the filing of SOCE by anyone in any circumstances except when the Act is amended to allow such.
+It did not allow Comelec to extend or move the deadline of the filing of SOCE by anyone in any circumstances except when the Act is amended to allow such.
 But there is no amendment of R.A. 7166 mentioning or authorizing anyone to extend the deadline.
 Therefore, is the extension of the deadline a violation not only of R.A. 7166 but also of Comelec Resolution 9991?
 As the Head of the Comelec Campaign Finance Office, Christian Robert Lim, said, "would be a reversal of the commission’s own resolution on the matter.”
