--- a/_posts/2016-06-16-20160616T213912.md
+++ b/_posts/2016-06-16-20160616T213912.md
@@ -112,7 +112,7 @@ They may have referred to their mandate in R.A. 7166 Section 35 which states,
 
 But R.A. 7166 Section 35 speaks of the implementation of the Act.
 To implement is to enforce and not to amend nor to violate.
-It did not allow Comelec to extend or move the deadline of the filing of SOCE by anyone in any circumstances except when the Act is amended to allow such.
+It does not allow Comelec to extend or move the deadline of the filing of SOCE by anyone in any circumstances except when the Act is amended to allow such.
 But there is no amendment of R.A. 7166 mentioning or authorizing anyone to extend the deadline.
 Therefore, is the extension of the deadline a violation not only of R.A. 7166 but also of Comelec Resolution 9991?
 As the Head of the Comelec Campaign Finance Office, Christian Robert Lim, said, "would be a reversal of the commission’s own resolution on the matter.”
