Rephrase news bit text

--- a/newsbit/_posts/2016-06-20-20160620T222321.md
+++ b/newsbit/_posts/2016-06-20-20160620T222321.md
@@ -6,4 +6,4 @@ published: true
 reference: 
 ---
 
-2 petitions filed by Atty Manuelito Luna and Justino Padiernos asking Supreme Court to nullify Comelec's decision to extend SOCE deadline.
+2 petitions filed by Atty Manuelito Luna and Justino Padiernos asking Supreme Court to nullify Comelec's decision extending SOCE deadline.
