Fix missing word in post

--- a/_posts/2016-06-20-20160620T213320.md
+++ b/_posts/2016-06-20-20160620T213320.md
@@ -15,7 +15,7 @@ The following is the updated 10-point socioeconomic agenda:
 
 * Continue and maintain current macroeconomic policies, including fiscal, monetary, and trade policies.
 * Institute progressive tax reform and more effective tax collection, indexing taxes to inflation. A tax reform package will be submitted to Congress by September 2016.
-* Increase competitiveness and the ease of doing business. This effort will draw upon successful models used to attract business to local cities (e.g., Davao) and pursue the relaxation of the Constitutional restrictions on foreign ownership, except as regards land ownership, in order to attract foreign direct investment;
+* Increase competitiveness and the ease of doing business. This effort will draw upon successful models used to attract business to local cities (e.g., Davao) and pursue the relaxation of the Constitutional restrictions on foreign ownership, except as regards to land ownership, in order to attract foreign direct investment;
 * Accelerate annual infrastructure spending to account for 5% of GDP, with Public-Private Partnerships playing a key role.
 * Promote rural and value chain development toward increasing agricultural and rural enterprise productivity and rural tourism.
 * Ensure security of land tenure to encourage investments, and address bottlenecks in land management and titling agencies.
