--- a/_posts/2016-06-20-20160620T213320.md
+++ b/_posts/2016-06-20-20160620T213320.md
@@ -13,16 +13,16 @@ The original 8-point economic agenda of the incoming administration has been upd
 
 The following is the updated 10-point socioeconomic agenda:
 
-* Continue and maintain current macroeconomic policies, including fiscal, monetary, and trade policies.
-* Institute progressive tax reform and more effective tax collection, indexing taxes to inflation. A tax reform package will be submitted to Congress by September 2016.
-* Increase competitiveness and the ease of doing business. This effort will draw upon successful models used to attract business to local cities (e.g., Davao) and pursue the relaxation of the Constitutional restrictions on foreign ownership, except as regards to land ownership, in order to attract foreign direct investment;
-* Accelerate annual infrastructure spending to account for 5% of GDP, with Public-Private Partnerships playing a key role.
-* Promote rural and value chain development toward increasing agricultural and rural enterprise productivity and rural tourism.
-* Ensure security of land tenure to encourage investments, and address bottlenecks in land management and titling agencies.
-* Invest in human capital development, including health and education systems, and match skills and training to meet the demand of businesses and the private sector.
-* Promote science, technology, and the creative arts to enhance innovation and creative capacity towards self-sustaining, inclusive development.
-* Improve social protection programs, including the government’s Conditional Cash Transfer program, to protect the poor against instability and economic shocks.
-* Strengthen implementation of the Responsible Parenthood and Reproductive Health Law to enable especially poor couples to make informed choices on financial and family planning.
+1. Continue and maintain current macroeconomic policies, including fiscal, monetary, and trade policies.
+2. Institute progressive tax reform and more effective tax collection, indexing taxes to inflation. A tax reform package will be submitted to Congress by September 2016.
+3. Increase competitiveness and the ease of doing business. This effort will draw upon successful models used to attract business to local cities (e.g., Davao) and pursue the relaxation of the Constitutional restrictions on foreign ownership, except as regards to land ownership, in order to attract foreign direct investment;
+4. Accelerate annual infrastructure spending to account for 5% of GDP, with Public-Private Partnerships playing a key role.
+5. Promote rural and value chain development toward increasing agricultural and rural enterprise productivity and rural tourism.
+6. Ensure security of land tenure to encourage investments, and address bottlenecks in land management and titling agencies.
+7. Invest in human capital development, including health and education systems, and match skills and training to meet the demand of businesses and the private sector.
+8. Promote science, technology, and the creative arts to enhance innovation and creative capacity towards self-sustaining, inclusive development.
+9. Improve social protection programs, including the government’s Conditional Cash Transfer program, to protect the poor against instability and economic shocks.
+10. Strengthen implementation of the Responsible Parenthood and Reproductive Health Law to enable especially poor couples to make informed choices on financial and family planning.
 
 {% comment %}
 
