Fix intro paragraph in post

--- a/_posts/2016-06-20-20160620T213320.md
+++ b/_posts/2016-06-20-20160620T213320.md
@@ -8,8 +8,9 @@ tags: [economy, social, socioeconomic]
 published: true
 ---
 
-A two-day economic forum, attended by more than 400 delegates, in Davao, which started 20 June 2016, tackles the Duterte administration socioeconomic agenda.
+A two-day economic forum, "Sulong Pilipinas: Hakbang Tungo sa Kaunlaran", starting 20 June 2016 was held in Davao to discuss the incoming Duterte administration socioeconomic agenda.
 The original 8-point economic agenda of the incoming administration has been updated to include Reproductive Health Law and Science, Technology and the Arts.
+The event was co-organized by the Philippine Chamber of Commerce and Industry and the Mindanao Business Council and was attended by more than 400 delegates.
 
 The following is the updated 10-point socioeconomic agenda:
 
