--- a/_posts/2016-06-12-20160612T152603.md
+++ b/_posts/2016-06-12-20160612T152603.md
@@ -15,17 +15,17 @@ After the EDSA revolution, the event was continued but came to be known as a Vin
 The French term "Vin d’Honneur" means “wine of honor" and traditionally takes place after inaugurations, speeches, and ceremonies.
 The event is now being held twice a year, during the New Year and during the celebration of the Philippine Independence Day.
 Over the years, it has come to be considered primarily a diplomatic event highlighted by a toast between the President and the Papal Nuncio.
-&#x25cf;&nbsp;[Source](http://www.gov.ph/2013/01/10/briefer-on-the-new-year-vin-dhonneur-2013/)
+[[Source](http://www.gov.ph/2013/01/10/briefer-on-the-new-year-vin-dhonneur-2013/)]
 
 ###### Papal Nuncio
 
 Nuncio or Papal Nuncio (Apostolic nuncio) is the title for an ecclesiastical diplomat, being an envoy or permanent diplomatic representative of the Holy See to a state or international organization.
 A nuncio is appointed by the Holy See, which is usually an archbishop, and is the head of the diplomatic mission (Apostolic Nunciature), which is the equivalent of an embassy.
-&#x25cf;&nbsp;[Source](https://en.wikipedia.org/wiki/Papal_diplomacy)
+[[Source](https://en.wikipedia.org/wiki/Papal_diplomacy)]
 
 ###### Diplomatic Corps
 
 The diplomatic corps is the collective body of foreign diplomats which may refer to ambassadors, high commissioners, and others, who represent their countries in another state or country.
 The term is sometimes confused with the collective body of diplomats from a particular country—the proper term for which is diplomatic service.
 In some countries, the longest-serving ambassador to a country is given the title Dean of the Diplomatic Corps and is sometimes accorded a high position in the order of precedence.
-&#x25cf;&nbsp;[Source](https://en.wikipedia.org/wiki/Diplomatic_corps)
+[[Source](https://en.wikipedia.org/wiki/Diplomatic_corps)]&nbsp;&#x25cf;
