--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,11 @@ permalink: /404/
 ---
 
 Sorry for the inconvenience.<br/>
-We have misplaced that URL or it's pointing to something that doesn't exist.
+The page you were looking for appears to have been moved, deleted, or does not exist.
+
+* If you typed in the address, check your spelling.
+* If you followed a link, it's probably broken.
+* If you're not sure what you're looking for, you could go back to where you were.
 
 [Head back home]({{ site.baseurl }}/) for now as we fix this error.
 
