--- a/announce/_posts/2016-06-12-20160612T155713.md
+++ b/announce/_posts/2016-06-12-20160612T155713.md
@@ -1,6 +1,8 @@
 ---
 title: Philippine Independence Day
 date: 2016-06-12T15:57:13UTC
+datestart: 2016-06-12
+dateend: 2016-06-12
 excerpt:
 image: /images/public/Flag_of_the_Philippines-32px.svg.png
 ---
