--- a/announce/_posts/2016-06-28-20160628T151134.md
+++ b/announce/_posts/2016-06-28-20160628T151134.md
@@ -8,10 +8,9 @@ eventdateend: 2016-08-26
 categories: [announcement]
 published: true
 permalink: 
+link: 20160628T172635
 ---
 
 The 25th Mindanao Business Conference (MinBizCon) will be held on 24-26 August 2016 at the Philippine Gateway Hotel in Surigao City.
-The three-day conference is expected to expand business opportunities in the region with the year's theme "Mindanao: ASEAN's Emerging Economic Hub".
-&#x25cf;&nbsp;[[Source](http://news.pia.gov.ph/article/view/2041466644047/25th-minbizcon-to-expand-business-opportunities#sthash.vA5Au64C.dpuf)].
-
+The three-day conference is expected to expand business opportunities in the region with the year's theme "Mindanao: ASEAN's Emerging Economic Hub". {% if page.link %} [read more...](/post/{{ page.link }}.html) &#x25cf; {% else %} &#x25cf; {% endif %}
  
