Correct announcement category

--- a/announce/_posts/2016-06-12-20160612T155713.md
+++ b/announce/_posts/2016-06-12-20160612T155713.md
@@ -5,6 +5,7 @@ datestart: 2016-06-12
 dateend: 2016-06-12
 eventdatestart: 2016-06-12
 eventdateend: 2016-06-12
+categories: [announcement]
 excerpt:
 image: /images/public/Flag_of_the_Philippines-32px.svg.png
 ---
