Correct news bit text spelling

--- a/newsbit/_posts/2016-06-24-20160624T122734.md
+++ b/newsbit/_posts/2016-06-24-20160624T122734.md
@@ -6,4 +6,4 @@ published: true
 reference: 
 ---
 
-Second public consultation on te draft IRR of the Data Privacy Act of 2012 is on 13 July 2016 at UP Diliman, Quezon City.
+Second public consultation on the draft IRR of the Data Privacy Act of 2012 is on 13 July 2016 at UP Diliman, Quezon City.
