--- a/announce/_posts/2016-06-30-20160630T015430.md
+++ b/announce/_posts/2016-06-30-20160630T015430.md
@@ -11,5 +11,5 @@ permalink:
 link: 20160630T002859
 ---
 
-Today, 30 June 2016, is the inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, which will be held at Rizal Hall, Malacañan Palace.
-The event is scheduled to start 10:30 am and will end before 4:00 pm. {% if page.link %} [read more...](/post/{{ page.link }}.html) {% endif %} &#x25cf;
+Inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, 30 June 2016, 10:30 am to 4:00 pm, Rizal Hall, Malacañan Palace, .
+<a href="/post/{{ page.link }}.html">[read more...]</a> &#x25cf;
