--- a/announce/_posts/2016-06-28-20160628T151000.md
+++ b/announce/_posts/2016-06-28-20160628T151000.md
@@ -10,5 +10,4 @@ published: true
 permalink: 
 ---
 
-Presidential inauguration of Rodrigo R. Duterte, 30 June 2016 in Rizal Hall, Malacañan Palace.
-&nbsp;&#x25cf;
+Presidential inauguration of Rodrigo R. Duterte, 30 June 2016 in Rizal Hall, Malacañan Palace. &#x25cf;
