--- a/_posts/2016-06-30-20160630T002859.md
+++ b/_posts/2016-06-30-20160630T002859.md
@@ -15,8 +15,8 @@ The event is scheduled to start 10:30 am and will end before 4:00 pm.
 Earlier interview with incoming Presidential Communications Operations Office (PCOO) Secretary Martin Andanar, he said, there will likely be not more than 627 guests will attend.
 
 The inauguration will be simple.
-His attire, barong tagalog made from piña jusi fabric paired with black pure cotton pants, is created by Chardin, a Davao-based fashion house.
-His barong was designed by Boni Adaza and said, "He wanted to incorporate a symbol to represent the 11 minorities in Mindanao. The tribal prints of the Manobo is the least complicated that’s why we have chosen that. It also shows the President’s simplicity."
+His attire, barong tagalog made from Mindanao silk by Melody Mae Parrel-Pimentel of Cagayan De Oro.
+His barong was embroidered with a mini Philippine flag on the left side of the chest.
 
 The food during the occassion are simple, like the lumpiang ubod (coconut pith spring roll), pandesal with kesong puti (white cheese made from unskimmed carabao’s milk) and Vigan longganisa (sausage from Northern Ilocandia) grilled on the spot, monggo soup mixed with smoked fish and alugbati (malabar spinach) in demitasse cups, fried saba (Carbava banana) slices, and Durian tartlet. For drinks, guests will have a choice between homegrown delights pine-mango cooler and dalandan juice.
 
