Update post attribution

--- a/feature/_posts/2016-07-02-20160702T191414.md
+++ b/feature/_posts/2016-07-02-20160702T191414.md
@@ -9,7 +9,7 @@ categories: [info_feature]
 tags: 
 published: true
 image: /images/public/national_museum_philippines_218x145.jpg
-image_attribution: Image by Elmer B. Domingo CC BY-SA 3.0
+image_attribution: Elmer B. Domingo CC BY-SA 3.0
 ---
 
 Starting from 1 July 2016, the National Museum will be free to the public.
