Update announcement posts regarding changes

--- a/announce/_posts/2016-06-12-20160612T155713.md
+++ b/announce/_posts/2016-06-12-20160612T155713.md
@@ -7,7 +7,9 @@ eventdatestart: 2016-06-12
 eventdateend: 2016-06-12
 categories: [announcement]
 excerpt:
-image: /images/public/Flag_of_the_Philippines-32px.svg.png
+image: 
+image_attribution:
+link: 20160612T140710
 ---
 
 Araw ng Kasarinlan; also known as "Araw ng Kalayaan", (or "Day of Freedom") is an annual national holiday of the Philippines observed on June 12, commemorating the Philippine Declaration of Independence from Spain on June 12, 1898. Since 1962, it has been the country's National Day.
