--- a/announce/_posts/2016-06-28-20160628T151000.md
+++ b/announce/_posts/2016-06-28-20160628T151000.md
@@ -7,7 +7,9 @@ eventdatestart: 2016-06-30
 eventdateend: 2016-06-30
 categories: [announcement]
 published: true
-permalink: 
+image:
+image_attribution:
+link: 
 ---
 
 Presidential inauguration of Rodrigo R. Duterte, 30 June 2016 in Rizal Hall, Malacañan Palace.
