--- a/announce/_posts/2016-06-28-20160628T151134.md
+++ b/announce/_posts/2016-06-28-20160628T151134.md
@@ -7,7 +7,8 @@ eventdatestart: 2016-08-24
 eventdateend: 2016-08-26
 categories: [announcement]
 published: true
-permalink: 
+image:
+image_attribution:
 link: 20160628T172635
 ---
 
