--- a/announce/_posts/2016-06-28-20160628T233618.md
+++ b/announce/_posts/2016-06-28-20160628T233618.md
@@ -7,7 +7,8 @@ eventdatestart: 2016-07-13
 eventdateend:   2016-07-13
 categories: [announcement]
 published: true
-permalink: 
+image:
+image_attribution:
 link: 
 ---
 
