--- a/announce/_posts/2016-06-30-20160630T015430.md
+++ b/announce/_posts/2016-06-30-20160630T015430.md
@@ -7,7 +7,8 @@ eventdatestart: 2016-06-30
 eventdateend: 2016-06-30
 categories: [announcement]
 published: true
-permalink: 
+image:
+image_attribution:
 link: 20160630T002859
 ---
 
