--- a/_posts/2016-06-30-20160630T002859.md
+++ b/_posts/2016-06-30-20160630T002859.md
@@ -6,8 +6,8 @@ layout: post
 categories: [post]
 tags: [inauguration, president, duterte]
 published: true
-image: /images/public/duterte_inauguration_20160630_big.jpg
-imageref: RTVM
+image: /images/post/duterte_inauguration_20160630_big.jpg
+image_attribution: RTVM
 ---
 
 Today, 30 June 2016, is the inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, which will be held at Rizal Hall, Malacañan Palace.
