--- a/_posts/2016-06-30-20160630T053903.md
+++ b/_posts/2016-06-30-20160630T053903.md
@@ -6,8 +6,8 @@ layout: post
 categories: [post]
 tags: [inauguration, speech, address, president, duterte]
 published: true
-image: /images/public/duterte_inauguration_20160630_big.jpg
-imageref: RTVM
+image: /images/post/duterte_inauguration_20160630_big.jpg
+image_attribution: RTVM
 ---
 
 Here's the Inaugural Address of President Rodrigo Roa Duterte with additional formating and emphasis.
