Add feature post

--- a/feature/_posts/2016-07-03-20160703T231228.md
+++ b/feature/_posts/2016-07-03-20160703T231228.md
@@ -5,6 +5,7 @@ excerpt: "First Pacific (HKEx: 142, ADRs: FPAFY) is a Hong Kong-based investment
 layout: post
 datestart:  2016-07-03
 dateend:    2022-07-03
+style:
 categories: [info_feature]
 tags: [first pacific, mvp]
 published: true
