Change post image

--- a/_posts/2016-06-30-20160630T002859.md
+++ b/_posts/2016-06-30-20160630T002859.md
@@ -6,7 +6,7 @@ layout: post
 categories: [post]
 tags: [inauguration, president, duterte]
 published: true
-image: /images/post/duterte_inauguration_20160630_big.jpg
+image: /images/post/duterte_inaugural_address.png
 image_attribution: RTVM
 ---
 
