Add tag for feature post

--- a/feature/_posts/2016-07-04-20160704T043353.md
+++ b/feature/_posts/2016-07-04-20160704T043353.md
@@ -7,7 +7,7 @@ datestart:  2016-07-04
 dateend:    2016-07-04
 style: horizontal
 categories: [info_feature]
-tags: 
+tags: [pnp]
 published: true
 image: 
 image_attribution: 
