Update links in feature posts

--- a/feature/_posts/2016-07-03-20160703T231228.md
+++ b/feature/_posts/2016-07-03-20160703T231228.md
@@ -9,9 +9,10 @@ style:
 categories: [info_feature]
 tags: [first pacific, mvp]
 published: true
+permalink: /feature/20160703T231228
 image: 
 image_attribution: 
-link: 
+link: 20160703T231228
 ---
 
 As currently constituted, the First Pacific portfolio has a balance of more mature assets in Philippine Long Distance Telephone Company (“PLDT”) and PT Indofood Sukses Makmur Tbk (“Indofood”) which deliver strong dividend flows allowing investment for growth in Metro Pacific Investments Corporation (“MPIC”), Goodman Fielder Pty Limited (“Goodman Fielder”), Philex Mining Corporation (“Philex”), PacificLight Power Pte. Ltd. (“PLP”) and Roxas Holdings, Inc. (“RHI”). PLDT is the dominant telecommunications provider in the Philippines and Indofood is the largest vertically integrated food company in Indonesia. MPIC is the Philippines’ largest infrastructure investment management and holding company with investments in the Philippines’ largest electricity distributor, toll road operator, water distributor, hospital group and rails. Goodman Fielder is the leading food company in Australasia. Philex is one of the largest metal mining companies in the Philippines, producing gold, copper and silver. PLP is the operator of one of Singapore’s most efficient gas-fired power plants and RHI runs an integrated sugar and ethanol businesses in the Philippines. 
