--- a/feature/_posts/2016-07-04-20160704T043353.md
+++ b/feature/_posts/2016-07-04-20160704T043353.md
@@ -1,20 +1,21 @@
 ---
 title: PNP Chief PDG Ronald Dela Rosa
 date: 2016-07-04T04:33:53UTC
-excerpt: Assumed command as the 21st PNP Chief, Police Director General Ronald 'Bato' Dela Rosa, have never thought of becoming PNP Chief and believes it to be destiny.
+excerpt: From humble beginnings in Davao del Sur and now that he is the 21st PNP Chief, Police Director General Ronald 'Bato' Dela Rosa never dreamed of being in his position now. He believes it must be destiny that placed him there and because he has a crucial job for his country.
 layout: post
-datestart:  2016-07-04
-dateend:    2016-07-04
+datestart:  2016-07-01
+dateend:    2022-07-01
 style: horizontal
 categories: [info_feature]
 tags: [pnp]
 published: true
-image: 
-image_attribution: 
-link: 
+permalink: /feature/20160704T043353
+image: images/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+image_attribution: RTVM
+link: 20160704T043353
 ---
 
-Dela Rosa rose from humble beginnings in this hometown of Bato, Sta. Cruz, Davao del Sur and is a product of the public school system being a graduate of at the Bato Elementary School, Sta. Cruz National High School and Mindanao State University.
+Dela Rosa rose from humble beginnings in this hometown of Bato, Sta. Cruz, Davao del Sur and is a product of the public school system being a graduate of Bato Elementary School, Sta. Cruz National High School and Mindanao State University.
 
 He is a member of the illustrious PMA "Sinagtala" Class of 1986.
 
