--- a/_posts/2016-07-02-20160702T050516.md
+++ b/_posts/2016-07-02-20160702T050516.md
@@ -3,10 +3,12 @@ title: Press Statement of Chief, PNP PDG Ronald Dela Rosa
 date: 2016-07-02T05:05:16UTC
 excerpt: First press statement of the new PNP Chief after his assumption of command.
 layout: post
+style: horizontal
 categories: [post]
 tags: [pnp, statement]
 published: true
-published: true
+image: /images/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+image_attribution: RTVM
 ---
 
 July 1, 2016
