--- a/_posts/2016-07-01-20160701T023310.md
+++ b/_posts/2016-07-01-20160701T023310.md
@@ -5,7 +5,7 @@ excerpt: The new President attended the Assumption of Command of Police Chief Su
 layout: post
 style: horizontal
 categories: [post]
-tags: [inauguration, speech, address, president, duterte]
+tags: [pnp, chief of police, assumption of command]
 published: true
 image: /images/post/pnp_chief_assumption_of_command_ronald_dela_rosa.png
 image_attribution: RTVM
