--- a/_posts/2016-07-02-20160702T050516.md
+++ b/_posts/2016-07-02-20160702T050516.md
@@ -26,3 +26,5 @@ Some Regional Directors, meanwhile, had to be reassigned to other equally-import
 I urge the entire 170,000 strong officers, men and women of the PNP to rally behind the newly reorganized Team PNP.
 
 Thank you.
+
+[[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/latest-news/3431-press-statement-of-the-chief-pnp-pdg-ronald-m-dela-rosa)]
