--- a/_posts/2016-07-02-20160702T095631.md
+++ b/_posts/2016-07-02-20160702T095631.md
@@ -13,9 +13,7 @@ image_attribution:
 
 The new PNP Chief PDG Ronald M Dela Rosa approved the reorganization of senior police officers in key positions of the Philippine National Police (PNP) which was recommended by the Senior Officers Placement and Promotion Board (SOPPB) for immediate implementation by the Directorate for Personnel and Records Management (DPRM). The key positions mentioned refer to the PNP includes the PNP Command Group, Directorial Staff, Police Regional Offices and National Support Units.
 
-PDG Dela Rosa said, "This reorganization followed the time-honored tradition in the police service that recognizes merit, seniority and competence in the selection process."
-
-The following officers are designated to new positions effective 1 July 2016:
+The following PNP officers are designated to new positions effective 1 July 2016:
 
 |---------|----------|------|
 | Officer | Position | Unit |
@@ -61,3 +59,8 @@ The following officers are designated to new positions effective 1 July 2016:
 | PCSupt Lyndon G Cubos | Acting Director | Finance Service
 | PCSupt Edwin C Roque | Acting Director | Legal Service and
 | PCSupt Prudencio Tom T Bañas | Acting Director | Police Retirement Benefit Service (PNP-PIO)
+
+<br/>
+PDG Dela Rosa said, "This reorganization followed the time-honored tradition in the police service that recognizes merit, seniority and competence in the selection process."
+
+[[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/features/3432-dela-rosa-names-new-officials-to-team-pnp)]
