Use dropbox as image repo

--- a/_posts/2016-06-30-20160630T002859.md
+++ b/_posts/2016-06-30-20160630T002859.md
@@ -6,7 +6,7 @@ layout: post
 categories: [post]
 tags: [inauguration, president, duterte]
 published: true
-image: /images/post/duterte_inaugural_address.png
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
 image_attribution: RTVM
 ---
 
