--- a/_posts/2016-06-30-20160630T053903.md
+++ b/_posts/2016-06-30-20160630T053903.md
@@ -6,7 +6,7 @@ layout: post
 categories: [post]
 tags: [inauguration, speech, address, president, duterte]
 published: true
-image: /images/post/duterte_inauguration_20160630_big.jpg
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630_big.jpg
 image_attribution: RTVM
 ---
 
