--- a/_posts/2016-07-02-20160702T050516.md
+++ b/_posts/2016-07-02-20160702T050516.md
@@ -7,7 +7,7 @@ style: horizontal
 categories: [post]
 tags: [pnp, statement]
 published: true
-image: /images/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
 image_attribution: RTVM
 ---
 
