--- a/feature/_posts/2016-07-02-20160702T191414.md
+++ b/feature/_posts/2016-07-02-20160702T191414.md
@@ -10,7 +10,7 @@ categories: [info_feature]
 tags: [mvp, first pacific]
 published: true
 permalink: /feature/20160702T191414
-image: /images/post/manuel_velez_pangilinan.jpg
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/manuel_velez_pangilinan.jpg
 image_attribution: Wikipedia Unknown CC BY-SA 3.0
 link: 20160702T191414
 ---
