--- a/_posts/2016-07-01-20160701T023310.md
+++ b/_posts/2016-07-01-20160701T023310.md
@@ -7,7 +7,7 @@ style: horizontal
 categories: [post]
 tags: [pnp, chief of police, assumption of command]
 published: true
-image: /images/post/pnp_chief_assumption_of_command_ronald_dela_rosa.png
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
 image_attribution: RTVM
 ---
 
