--- a/_posts/2016-07-01-20160701T042747.md
+++ b/_posts/2016-07-01-20160701T042747.md
@@ -7,7 +7,7 @@ style: horizontal
 categories: [post]
 tags: [afp, chief of staff, change of command]
 published: true
-image: /images/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
 image_attribution: RTVM
 ---
 
