--- a/announce/_posts/2016-07-02-20160702T191414.md
+++ b/announce/_posts/2016-07-02-20160702T191414.md
@@ -7,7 +7,7 @@ eventdatestart: 2016-08-24
 eventdateend: 2022-07-03
 categories: [announcement]
 published: true
-image: /images/public/national_museum_philippines_218x145.jpg
+image: https://dl.dropboxusercontent.com/u/47611946/duterte/site/national_museum_philippines_218x145.jpg
 image_attribution: Elmer B. Domingo CC BY-SA 3.0
 link: 
 ---
