--- a/_posts/2016-07-01-20160701T042747.md
+++ b/_posts/2016-07-01-20160701T042747.md
@@ -1,7 +1,7 @@
 ---
 title: The New Armed Forces of the Philippines Chief of Staff
 date: 2016-07-01T04:27:47UTC
-excerpt: President Rodrigo Roa Duterte led the Armed Forces of the Philippines Change of Command in Camp Aguinaldo in honor of outgoing Chief of Staff Lt. Gen. Glorioso V. Miranda and the incoming Chief of Staff Lt. Gen. Ricardo R. Visaya.
+excerpt: President Rodrigo Roa Duterte led the Armed Forces of the Philippines Change of Command in Camp Aguinaldo in honor of outgoing Acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the incoming Chief of Staff Lt. Gen. Ricardo R. Visaya.
 layout: post
 style: horizontal
 categories: [post]
