Rephrase post title

--- a/_posts/2016-06-30-20160630T053903.md
+++ b/_posts/2016-06-30-20160630T053903.md
@@ -1,5 +1,5 @@
 ---
-title: Transcript of the Inaugural Address of President Rodrigo Duterte
+title: President Rodrigo Duterte Inaugural Address Transcript
 date: 2016-06-30T05:39:03UTC
 excerpt: Today marks the event worthy of Philippine history. The inauguration of the first Mindanaoan President of the country, Rodrigo Roa Duterte.
 layout: post
