--- a/announce/events/_posts/2016-07-06-20160706T072111.md
+++ b/announce/events/_posts/2016-07-06-20160706T072111.md
@@ -12,4 +12,4 @@ image_attribution:
 link: 
 ---
 
-__July__ is National Disaster Consciousness Month by virtue of Executive Order No. 137, signed August 1999 by former President Joseph Estrada.
+July is National Disaster Consciousness Month by virtue of Executive Order No. 137, signed August 1999 by former President Joseph Estrada.
