--- a/news/articles/_posts/2016-06-16-20160616T213912.md
+++ b/news/articles/_posts/2016-06-16-20160616T213912.md
@@ -3,7 +3,7 @@ title: Deadline of Filing of the Statement of Contributions and Expenditures (SO
 date: 2016-06-16T21:39:12UTC
 excerpt: What went wrong with the SOCE deadline?
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [comelec, election, soce, liberal party]
 published: true
 ---
