--- a/news/articles/_posts/2016-06-20-20160620T161719.md
+++ b/news/articles/_posts/2016-06-20-20160620T161719.md
@@ -3,7 +3,7 @@ title: Commissioner Christian Robert Lim's Resignation as Comelec Campaign Finan
 date: 2016-06-20T16:17:19UTC
 excerpt: Commissioner Christian Robert Lim filed his irrevocable resignation as Comelec Campaign Finance Officer June 20, 2016.
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [comelec, election, soce, christian robert lim]
 published: true
 ---
