--- a/news/articles/_posts/2016-06-24-20160624T081212.md
+++ b/news/articles/_posts/2016-06-24-20160624T081212.md
@@ -3,7 +3,7 @@ title: Business Community Top Recommendations to Incoming Administration
 date: 2016-06-24T08:12:12UTC
 excerpt: In conclusion of the two-day business forum held in Davao on 20-21 June 2016, the business community came up with recommendations for the incoming President-elect Rodrigo R. Duterte and his cabinet.
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [commerce, industry, pcci]
 published: true
 ---
