--- a/news/sections/_posts/2016-07-02-20160702T050516.md
+++ b/news/sections/_posts/2016-07-02-20160702T050516.md
@@ -1,10 +1,10 @@
 ---
-title: Press Statement of Chief, PNP PDG Ronald Dela Rosa
+title: Press Statement of new PNP Chief
 date: 2016-07-02T05:05:16UTC
-excerpt: First press statement of the new PNP Chief after his assumption of command.
+excerpt: First press statement of the new PNP Chief, PDG Ronald Dela Rosa, after his assumption of command on 1 July 2016.
 layout: post
 style: horizontal
-categories: [post]
+categories: [news_section]
 tags: [pnp, statement]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
