--- a/news/sections/_posts/2016-07-02-20160702T095631.md
+++ b/news/sections/_posts/2016-07-02-20160702T095631.md
@@ -4,7 +4,7 @@ date: 2016-07-02T09:56:31UTC
 excerpt: PNP Chief, PDG Ronald M Dela Rosa approved the reorganization of senior police officers in key positions of the PNP Command Group, Directorial Staff, Police Regional Offices and National Support Units.
 layout: post
 style: horizontal
-categories: [post]
+categories: [news_section]
 tags: [pnp, statement, reorganization]
 published: true
 image: 
