--- a/news/top/_posts/2016-06-12-20160612T123257.md
+++ b/news/top/_posts/2016-06-12-20160612T123257.md
@@ -3,7 +3,7 @@ title: Duterte Times is now Online
 date: 2016-06-12T12:32:57UTC
 excerpt: Duterte Times is now online to deliver Philippine news and information for the Filipino people.
 layout: post
-categories: [post]
+categories: [news_top, news_article]
 tags: [duterte times, online, launch]
 published: true
 ---
