--- a/news/top/_posts/2016-06-30-20160630T002859.md
+++ b/news/top/_posts/2016-06-30-20160630T002859.md
@@ -1,9 +1,9 @@
 ---
-title: Inauguration of the 16th President of the Republic of the Philippines
+title: Inauguration of the 16th President
 date: 2016-06-30T00:28:59UTC
-excerpt: Today marks the event worthy of Philippine history. The inauguration of the first Mindanaoan President of the country, Rodrigo Roa Duterte.
+excerpt: Inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte. He will be the first President of the country from Mindanao.
 layout: post
-categories: [post]
+categories: [news_top, news_article]
 tags: [inauguration, president, duterte]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
