--- a/news/articles/_posts/2016-06-12-20160612T152603.md
+++ b/news/articles/_posts/2016-06-12-20160612T152603.md
@@ -3,7 +3,7 @@ title: "Vin d’Honneur"
 date: 2016-06-12T015:26:03UTC
 excerpt: What does it mean?
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [independence day, vin d honneur]
 published: true
 ---
