--- a/news/articles/_posts/2016-06-28-20160628T172635.md
+++ b/news/articles/_posts/2016-06-28-20160628T172635.md
@@ -3,7 +3,7 @@ title: 25th Mindanao Business Conference (MinBizCon)
 date: 2016-06-28T17:26:35UTC
 excerpt: Silver anniversary of MinBizCon will be celebrated by Mindanaoans in the mining capital of the Philippines, Surigao del Norte in Caraga region.
 layout: post
-categories: [post]
+categories: [news_article]
 tags: 
 published: true
 ---
