--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -3,7 +3,7 @@ title: President Rodrigo Duterte Inaugural Address
 date: 2016-06-30T05:39:03UTC
 excerpt: Today marks the event worthy of Philippine history. The inauguration of the first Mindanaoan President of the country, Rodrigo Roa Duterte.
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
