--- a/news/articles/_posts/2016-06-30-20160630T152101.md
+++ b/news/articles/_posts/2016-06-30-20160630T152101.md
@@ -1,9 +1,9 @@
 ---
-title: The New President Meets Militant Groups
+title: New President Meets Militant Groups
 date: 2016-06-30T15:21:01UTC
 excerpt: After the presidential inauguration in Malacañan Palace, militant groups marched towards the venue and was escorted by the Presidential Security Group.
 layout: post
-categories: [post]
+categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_multi_sectoral_meeting.png
