--- a/news/top/_posts/2016-07-01-20160701T023310.md
+++ b/news/top/_posts/2016-07-01-20160701T023310.md
@@ -1,10 +1,10 @@
 ---
-title: The New Philippine National Police Chief
+title: New Philippine National Police Chief
 date: 2016-07-01T02:33:10UTC
 excerpt: The new President attended the Assumption of Command of Police Chief Superintendent Ronald Dela Rosa as the new Philippine National Police Chief in Camp Crame, Quezon City.
 layout: post
 style: horizontal
-categories: [post]
+categories: [news_top, news_article]
 tags: [pnp, chief of police, assumption of command]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
