--- a/news/top/_posts/2016-07-01-20160701T042747.md
+++ b/news/top/_posts/2016-07-01-20160701T042747.md
@@ -1,10 +1,10 @@
 ---
-title: The New Armed Forces of the Philippines Chief of Staff
+title: New Armed Forces of the Philippines Chief of Staff
 date: 2016-07-01T04:27:47UTC
 excerpt: President Rodrigo Roa Duterte led the Armed Forces of the Philippines Change of Command in Camp Aguinaldo in honor of outgoing Acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the incoming Chief of Staff Lt. Gen. Ricardo R. Visaya.
 layout: post
 style: horizontal
-categories: [post]
+categories: [news_top, news_article]
 tags: [afp, chief of staff, change of command]
 published: true
 image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
