Use revised image info in yaml front matter

--- a/announce/events/_posts/2016-06-12-20160612T155713.md
+++ b/announce/events/_posts/2016-06-12-20160612T155713.md
@@ -8,7 +8,8 @@ eventdateend: 2016-06-12
 categories: [announcement]
 excerpt:
 image: 
-image_attribution:
+  source:
+  attribution:
 link: 20160612T140710
 ---
 
