--- a/feature/_posts/2016-07-02-20160702T191414.md
+++ b/feature/_posts/2016-07-02-20160702T191414.md
@@ -9,9 +9,11 @@ style: horizontal
 categories: [info_feature]
 tags: [mvp, first pacific]
 published: true
+image:
+  layout: auto_width
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/manuel_velez_pangilinan.jpg
+  attribution: Wikipedia Unknown CC BY-SA 3.0
 permalink: /feature/20160702T191414
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/manuel_velez_pangilinan.jpg
-image_attribution: Wikipedia Unknown CC BY-SA 3.0
 link: 20160702T191414
 ---
 
