--- a/feature/_posts/2016-07-03-20160703T231228.md
+++ b/feature/_posts/2016-07-03-20160703T231228.md
@@ -9,9 +9,11 @@ style:
 categories: [info_feature]
 tags: [first pacific, mvp]
 published: true
+image:
+  layout:
+  source:
+  attribution: 
 permalink: /feature/20160703T231228
-image: 
-image_attribution: 
 link: 20160703T231228
 ---
 
