--- a/feature/_posts/2016-07-04-20160704T043353.md
+++ b/feature/_posts/2016-07-04-20160704T043353.md
@@ -9,9 +9,11 @@ style: horizontal
 categories: [info_feature]
 tags: [pnp]
 published: true
+image:
+  layout: auto_width
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+  attribution: RTVM
 permalink: /feature/20160704T043353
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
-image_attribution: RTVM
 link: 20160704T043353
 ---
 
