--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -6,8 +6,10 @@ layout: post
 categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
-image_attribution: RTVM
+image:
+  layout:
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
+  attribution: RTVM
 ---
 
 Here's the Inaugural Address of President Rodrigo Roa Duterte with additional formating and emphasis.
