--- a/news/articles/_posts/2016-06-30-20160630T152101.md
+++ b/news/articles/_posts/2016-06-30-20160630T152101.md
@@ -6,8 +6,10 @@ layout: post
 categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_multi_sectoral_meeting.png
-image_attribution: RTVM
+image:
+  layout:
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_multi_sectoral_meeting.png
+  attribution: RTVM
 ---
 
 The rallying militant groups were escorted by the Presidential Security Group (PSG) into the Malacañan Palace after the inauguration of the new President.
