--- a/announce/events/_posts/2016-06-28-20160628T151134.md
+++ b/announce/events/_posts/2016-06-28-20160628T151134.md
@@ -8,7 +8,8 @@ eventdateend: 2016-08-26
 categories: [announcement]
 published: true
 image:
-image_attribution:
+  source:
+  attribution:
 link: 20160628T172635
 ---
 
