--- a/announce/events/_posts/2016-06-28-20160628T233618.md
+++ b/announce/events/_posts/2016-06-28-20160628T233618.md
@@ -8,7 +8,8 @@ eventdateend:   2016-07-13
 categories: [announcement]
 published: true
 image:
-image_attribution:
+  source:
+  attribution:
 link: 
 ---
 
