--- a/announce/events/_posts/2016-07-06-20160706T072111.md
+++ b/announce/events/_posts/2016-07-06-20160706T072111.md
@@ -8,7 +8,8 @@ eventdateend:   2016-07-31
 categories: [announcement]
 published: true
 image: 
-image_attribution: 
+  source:
+  attribution: 
 link: 
 ---
 
