--- a/news/top/_posts/2016-06-30-20160630T002859.md
+++ b/news/top/_posts/2016-06-30-20160630T002859.md
@@ -6,8 +6,10 @@ layout: post
 categories: [news_top, news_article]
 tags: [inauguration, president, duterte]
 published: true
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
-image_attribution: RTVM
+image:
+  layout:
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
+  attribution: RTVM
 ---
 
 Today, 30 June 2016, is the inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, which will be held at Rizal Hall, Malacañan Palace.
