--- a/news/top/_posts/2016-07-01-20160701T023310.md
+++ b/news/top/_posts/2016-07-01-20160701T023310.md
@@ -3,12 +3,13 @@ title: New Philippine National Police Chief
 date: 2016-07-01T02:33:10UTC
 excerpt: The new President attended the Assumption of Command of Police Chief Superintendent Ronald Dela Rosa as the new Philippine National Police Chief in Camp Crame, Quezon City.
 layout: post
-style: horizontal
 categories: [news_top, news_article]
 tags: [pnp, chief of police, assumption of command]
 published: true
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
-image_attribution: RTVM
+image:
+  layout: auto_width
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+  attribution: RTVM
 ---
 
 President Rodrigo Roa Duterte attended the Philippine National Police (PNP) _Assumption of Command_ ceremony of Police Chief Superintendent Ronald 'Bato' Dela Rosa as the 21st PNP Chief on 1 July 2016 at Camp Crame.
