--- a/news/top/_posts/2016-07-01-20160701T042747.md
+++ b/news/top/_posts/2016-07-01-20160701T042747.md
@@ -3,12 +3,13 @@ title: New Armed Forces of the Philippines Chief of Staff
 date: 2016-07-01T04:27:47UTC
 excerpt: President Rodrigo Roa Duterte led the Armed Forces of the Philippines Change of Command in Camp Aguinaldo in honor of outgoing Acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the incoming Chief of Staff Lt. Gen. Ricardo R. Visaya.
 layout: post
-style: horizontal
 categories: [news_top, news_article]
 tags: [afp, chief of staff, change of command]
 published: true
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
-image_attribution: RTVM
+image:
+  layout: auto_width
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
+  attribution: RTVM
 ---
 
 President Rodrigo Roa Duterte attended the Armed Forces of the Philippines (AFP) _Change of Command_ in honor of outgoing acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the new AFP Chief of Staff, Lt. Gen. Ricardo R. Visaya on 1 July 2016 at the AFP General Headquarters Grandstand in Camp Aguinaldo.
