Update news post video yaml front matter

--- a/news/top/_posts/2016-06-12-20160612T140710.md
+++ b/news/top/_posts/2016-06-12-20160612T140710.md
@@ -6,8 +6,10 @@ layout: post
 categories: [news_top, news_article]
 tags: [independence day, vin d honneur, aquino, pnoy]
 published: true
-video: ekiXQM5D-s4
-videoref: RTVM
+video:
+  layout: top
+  source: ekiXQM5D-s4
+  attribution: RTVM
 ---
 
 Watch the 118th Philippine Independence Day Vin D’Honneur led by President Benigno S. Aquino III.
