--- a/news/top/_posts/2016-06-30-20160630T002859.md
+++ b/news/top/_posts/2016-06-30-20160630T002859.md
@@ -10,6 +10,10 @@ image:
   layout:
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
   attribution: RTVM
+video:
+  layout: bottom
+  source: WV_vUn33558
+  attribution: RTVM
 ---
 
 Today, 30 June 2016, is the inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, which will be held at Rizal Hall, Malacañan Palace.
