--- a/news/top/_posts/2016-07-01-20160701T042747.md
+++ b/news/top/_posts/2016-07-01-20160701T042747.md
@@ -10,6 +10,10 @@ image:
   layout: auto_width
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
   attribution: RTVM
+video:
+  layout: bottom
+  source: Z_cbIffGczs
+  attribution: RTVM
 ---
 
 President Rodrigo Roa Duterte attended the Armed Forces of the Philippines (AFP) _Change of Command_ in honor of outgoing acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the new AFP Chief of Staff, Lt. Gen. Ricardo R. Visaya on 1 July 2016 at the AFP General Headquarters Grandstand in Camp Aguinaldo.
