--- a/news/top/_posts/2016-07-01-20160701T023310.md
+++ b/news/top/_posts/2016-07-01-20160701T023310.md
@@ -10,6 +10,10 @@ image:
   layout: auto_width
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
   attribution: RTVM
+video:
+  layout: bottom
+  source: c7b2Dqy96uA
+  attribution: RTVM
 ---
 
 President Rodrigo Roa Duterte attended the Philippine National Police (PNP) _Assumption of Command_ ceremony of Police Chief Superintendent Ronald 'Bato' Dela Rosa as the 21st PNP Chief on 1 July 2016 at Camp Crame.
